# agents-api/agents_api/autogen/openapi_model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-07-10T09:10:51+00:00
+#   timestamp: 2024-07-17T06:45:55+00:00
 
 from __future__ import annotations
 
@@ -858,13 +858,25 @@ class ChatMLImageContentPart(BaseModel):
     """
 
 
+class ToolResponse(BaseModel):
+    id: UUID
+    """
+    Optional Tool ID
+    """
+    output: Dict[str, Any]
+
+
 class CELObject(BaseModel):
+    model_config = ConfigDict(
+        extra="allow",
+    )
     workflow: str
-    arguments: CELObject
+    arguments: Dict[str, Any]
 
 
-class YieldWorkflowStep(CELObject):
-    pass
+class YieldWorkflowStep(BaseModel):
+    workflow: str
+    arguments: Dict[str, Any]
 
 
 class ToolCallWorkflowStep(BaseModel):
@@ -885,6 +897,32 @@ class IfElseWorkflowStep(BaseModel):
     else_: Annotated[YieldWorkflowStep, Field(alias="else")]
 
 
+class TransitionType(str, Enum):
+    """
+    Execution Status
+    """
+
+    finish = "finish"
+    wait = "wait"
+    error = "error"
+    step = "step"
+    cancelled = "cancelled"
+
+
+class ExecutionStatus(str, Enum):
+    """
+    Execution Status
+    """
+
+    queued = "queued"
+    starting = "starting"
+    running = "running"
+    awaiting_input = "awaiting_input"
+    succeeded = "succeeded"
+    failed = "failed"
+    cancelled = "cancelled"
+
+
 class CreateExecution(BaseModel):
     task_id: UUID
     arguments: Dict[str, Any]
@@ -893,53 +931,25 @@ class CreateExecution(BaseModel):
     """
 
 
-class ToolResponse(BaseModel):
-    id: UUID
+class StopExecution(BaseModel):
+    status: Literal["cancelled"] = "cancelled"
     """
-    Optional Tool ID
-    """
-    output: Dict[str, Any]
-
-
-class Type3(str, Enum):
-    """
-    Transition type
+    Stop Execution Status
     """
 
-    finish = "finish"
-    wait = "wait"
-    error = "error"
-    step = "step"
 
-
-class UpdateExecutionTransitionRequest(BaseModel):
+class ResumeExecutionTransitionRequest(BaseModel):
     """
     Update execution transition request schema
     """
 
-    type: Type3
-    """
-    Transition type
-    """
-    from_: Annotated[List[str | int], Field(alias="from", max_length=2, min_length=2)]
-    """
-    From state
-    """
-    to: Annotated[List[str | int] | None, Field(None, max_length=2, min_length=2)]
-    """
-    To state
-    """
-    output: Dict[str, Any]
-    """
-    Execution output
-    """
-    task_token: str | None = None
+    task_token: str
     """
     Task token
     """
-    metadata: Dict[str, Any] | None = None
+    output: Dict[str, Any]
     """
-    Custom metadata
+    Output of the execution
     """
 
 
@@ -1175,34 +1185,26 @@ class PatchToolRequest(BaseModel):
 class Execution(BaseModel):
     id: UUID
     task_id: UUID
-    created_at: UUID
+    created_at: AwareDatetime
     arguments: Dict[str, Any]
     """
     JSON Schema of parameters
     """
-    status: Annotated[
-        str,
-        Field(pattern="^(queued|starting|running|awaiting_input|succeeded|failed)$"),
-    ]
-    """
-    Execution Status
-    """
+    status: ExecutionStatus
 
 
 class ExecutionTransition(BaseModel):
     id: UUID
     execution_id: UUID
     created_at: AwareDatetime
+    updated_at: AwareDatetime
     outputs: Dict[str, Any]
     """
     Outputs from an Execution Transition
     """
-    from_: Annotated[List[str | int], Field(alias="from")]
-    to: List[str | int]
-    type: Annotated[str, Field(pattern="^(finish|wait|error|step)$")]
-    """
-    Execution Status
-    """
+    current: List[str | int]
+    next: List[str | int]
+    type: TransitionType
 
 
 class PromptWorkflowStep(BaseModel):
@@ -1259,6 +1261,9 @@ class Task(BaseModel):
     Describes a Task
     """
 
+    model_config = ConfigDict(
+        extra="allow",
+    )
     name: str
     """
     Name of the Task
@@ -1291,8 +1296,5 @@ class Task(BaseModel):
     ID of the Task
     """
     created_at: AwareDatetime
+    updated_at: AwareDatetime
     agent_id: UUID
-
-
-CELObject.model_rebuild()
-YieldWorkflowStep.model_rebuild()
